<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">盈丰</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	
    <string name="str_login_title">账户登录</string>
    <string name="str_login">登录</string>
    <string name="main_home">首     页</string>
    <string name="main_cart">购物车</string>
    <string name="main_person">个人中心</string>
    <string name="main_order">订     单</string>
    <string name="main_setting">设     置</string>
    <string name="login_name_hint">手机号或邮箱地址</string>
    <string name="login_password_hint">用户密码</string>
     <string name="login">登陆</string>
     <string name="location_hint">输入你要查询的位置</string>
     <string name="back">返回</string>
     <string name="input_area_hint1">请输入您的具体收货的地址</string>
     <string name="input_area_hint2">请输入收货地址建筑名称或标志(可选)</string>
     <string name="input_area_hint3">请输入收货联系电话号码</string>
     <string name="input_area_hint4">收货人称呼（不建议使用真实全名）</string>
</resources>