<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <include 
        layout="@layout/top_bar"
        android:id="@+id/top"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_below="@id/top">
        <AutoCompleteTextView 
           android:layout_width="fill_parent"
           android:layout_height="50sp"
           android:inputType="text"
           android:textSize="14sp"
           android:layout_marginTop="10sp"
           android:background="@drawable/login_text_selector"
           android:id="@+id/et_input_address"
           android:textColor="@color/dimgray"
           android:paddingLeft="4sp"
           android:hint="@string/input_area_hint1"
           />
         <EditText 
           android:layout_width="fill_parent"
           android:layout_height="50sp"
           android:inputType="text"
           android:textSize="14sp"
           android:layout_marginTop="10sp"
           android:id="@+id/et_input_sign"
           android:textColor="@color/dimgray"
           android:paddingLeft="4sp"
           android:hint="@string/input_area_hint2"
           android:background="@drawable/login_text_selector"/>
          <EditText 
           android:layout_width="fill_parent"
           android:layout_height="50sp"
           android:inputType="number"
           android:textSize="14sp"
           android:layout_marginTop="10sp"
           android:id="@+id/et_input_phonenumber"
           android:textColor="@color/dimgray"
           android:paddingLeft="4sp"
           android:hint="@string/input_area_hint3"
           android:background="@drawable/login_text_selector"/>
           <EditText 
           android:layout_width="fill_parent"
           android:layout_height="50sp"
           android:inputType="text"
           android:textSize="14sp"
           android:layout_marginTop="10sp"
           android:id="@+id/et_input_name"
           android:textColor="@color/dimgray"
           android:paddingLeft="4sp"
           android:hint="@string/input_area_hint4"
           android:background="@drawable/login_text_selector"/>
           <Button
		        android:layout_width="fill_parent"
		        android:layout_height="50sp"
		        android:layout_marginLeft="20sp"
		        android:layout_marginRight="20sp"
		        android:text="确认无误,添加地址"
		        android:onClick="onCommit"
		        android:textColor="@color/white"
		        android:layout_marginTop="20sp"
		        android:background="@drawable/general__shared__single_option2"
		        android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>