<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:id="@+id/home_whole_layout" 
    android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
        <HorizontalScrollView
            android:id="@+id/home_bottom_layout" 
            android:layout_width="fill_parent" 
            android:scrollbars="none"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content" > 
            <LinearLayout 
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView 
                    android:layout_width="100sp"
                    android:layout_height="fill_parent"
                    android:onClick="onClick"
                    android:id="@+id/tab_home"
                    android:layout_weight="1.0"
                    android:paddingTop="3sp"
                    android:paddingLeft="7sp"
                    android:background="@drawable/tab_back"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:clickable="true"
                     android:textColor="@color/default_text"
                    android:drawableLeft="@drawable/tab_home"
                    android:text="@string/main_home"/>
                <TextView
                    android:id="@+id/tab_cart"
                    android:layout_width="100sp"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:paddingLeft="4sp"
                    android:drawableLeft="@drawable/tab_cart"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_marginLeft="1sp"
					android:paddingTop="3sp"
                    android:onClick="onClick"
                    android:background="@drawable/tab_back"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:text="@string/main_cart"
                    android:textColor="@color/default_text" />
                 <TextView
                     android:id="@+id/tab_person"
                     android:layout_width="100sp"
                     android:layout_height="fill_parent"
                     android:clickable="true"
                     android:layout_weight="1.0"
                     android:textSize="18sp"
                     android:paddingLeft="4sp"
                     android:layout_marginLeft="1sp"
                     android:background="@drawable/tab_back"
                     android:layout_gravity="center"
                     android:paddingTop="3sp"
                     android:drawableLeft="@drawable/tab_person"
                     android:gravity="center"
                     android:text="@string/main_person"
                     android:textColor="@color/default_text" />
                 <TextView 
                    android:layout_width="100sp"
                    android:layout_height="fill_parent"
                     android:clickable="true"
                     android:layout_marginLeft="1sp"
                     android:layout_weight="1.0"
                     android:paddingLeft="7sp"
                     android:textSize="18sp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:background="@drawable/tab_back"
                     android:id="@+id/tab_order"
                     android:paddingTop="3sp"
                     android:textColor="@color/default_text"
                    android:drawableLeft="@drawable/tab_order"
                    android:text="@string/main_order"/>
                 <TextView 
                    android:layout_width="100sp"
                    android:layout_height="fill_parent"
                     android:clickable="true"
                     android:layout_weight="1.0"
                     android:paddingLeft="7sp"
                     android:layout_marginLeft="1sp"
                     android:gravity="center"
                     android:background="@drawable/tab_back"
                     android:textSize="18sp"
                     android:paddingTop="3sp"
                     android:layout_gravity="center"
                     android:id="@+id/tab_setting"
                     android:textColor="@color/default_text"
                    android:drawableLeft="@drawable/tab_setting"
                    android:text="@string/main_setting"/> 
                    </LinearLayout>
        </HorizontalScrollView>
   <TabHost android:id="@android:id/tabhost"
	 android:layout_above="@id/home_bottom_layout"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    <LinearLayout android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" 
            android:layout_width="fill_parent" 
            android:layout_height="0.0dip" 
            android:layout_weight="1.0" />
        <TabWidget android:id="@android:id/tabs" 
            android:visibility="gone" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="0.0" />
    </LinearLayout>
</TabHost> 
</RelativeLayout>